feat(15): swagger example check
